<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">



    <TextView
        android:id="@+id/mtext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ellipsize="marquee"
        android:fontFamily="sans-serif-black"
        android:marqueeRepeatLimit="marquee_forever"
        android:scrollHorizontally="true"
        android:singleLine="true"

        android:text="@string/warn"

        android:textColor="#F11818"></TextView>

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >


        <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"

        android:layout_height="218dp"
        android:layout_marginTop="22dp"
        app:cardBackgroundColor="#7be495">

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/viewflip1"
            android:layout_width="match_parent"
            android:layout_height="180dp"

            ></androidx.viewpager.widget.ViewPager>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tab_layout"
            android:layout_width="200dp"
            android:layout_height="10dp"
            app:tabIndicatorHeight="0dp"
            android:layout_marginLeft="85dp"
            android:layout_marginTop="194dp"
            app:tabBackground="@drawable/tab_selector"></com.google.android.material.tabs.TabLayout>

    </androidx.cardview.widget.CardView>


    <Button
        android:id="@+id/selectImage"
        android:layout_width="290dp"
        android:layout_height="40dp"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="26dp"
        android:elevation="20px"
        android:background="@drawable/buttondesign"

        android:fontFamily="sans-serif-condensed"

        android:text="@string/select"
        android:textColor="#93CA2D"
        android:textSize="56px"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn"
        android:layout_width="290dp"
        android:layout_height="40dp"
        android:layout_marginLeft="35dp"
        android:elevation="20dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/buttondesign"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/predict"
        android:textColor="#FF93CA2D"
        android:textSize="56px"
        android:textStyle="bold" />

<!--            <androidx.cardview.widget.CardView-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="50dp"-->
<!--                app:cardBackgroundColor="#7be495">-->

<!--                <TextView-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_margin="10dp"-->
<!--                    android:fontFamily="sans-serif-condensed"-->
<!--                    android:text="HOW TO RELIEF FROM COVID"-->
<!--                    android:textColor="#ffffff"-->

<!--                    android:textSize="25dp"-->
<!--                    android:textStyle="bold">-->

<!--                </TextView>-->
<!--            </androidx.cardview.widget.CardView>-->
<!--    -->
<!--    <VideoView-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="200dp"-->
<!--        android:id="@+id/video"-->

<!--        android:layout_marginTop="5dp"></VideoView>-->



</LinearLayout>
    </ScrollView>


















    <TextView

        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_centerHorizontal="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="1350dp"

 />

</RelativeLayout>