<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".Final">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="20dp"
        android:layout_marginBottom="20dp"
        android:layout_margin="20dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="20dp"
            android:background="@color/colorAccent">


            <TextView
                android:id="@+id/prediction"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="1dp"
                android:layout_marginEnd="1dp"
                android:layout_marginRight="1dp"
                android:layout_weight="1"
                android:fontFamily="@font/basic"
                android:gravity="center"
                android:text="@string/head"
                android:textColor="#0B5712"
                android:textSize="25sp"
                android:textStyle="bold"></TextView>


            <androidx.cardview.widget.CardView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="60dp"
    android:layout_marginLeft="35dp"
    app:cardCornerRadius="10dp">

    <ImageView
        android:id="@+id/images"
        android:layout_width="250dp"
        android:layout_height="200dp"
        android:scaleType="centerCrop"
        android:src="@drawable/imground">
    </ImageView>

</androidx.cardview.widget.CardView>


            <TextView
                android:id="@+id/textet"
                android:layout_width="95dp"
                android:layout_height="25dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="270dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/disease"
                android:textColor="#09601E"
                android:textSize="40px"></TextView>

            <TextView
                android:id="@+id/textett"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginTop="270dp"
                android:layout_toRightOf="@+id/textet"
                android:fontFamily="sans-serif-black"
                android:textColor="#AF0F0F"
                android:textSize="40px"></TextView>


            <TextView
                android:id="@+id/textet2"
                android:layout_width="260dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textet"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="5dp"
                android:fontFamily="sans-serif-black"
                android:layout_gravity="center_vertical|end"
                android:text="@string/bio"
                android:textColor="#09601E"
                android:textSize="40px"></TextView>

            <TextView
                android:id="@+id/textet3"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textet2"
                android:layout_marginLeft="20dp"
                android:justificationMode="inter_word"
                android:layout_marginTop="5dp"
                android:padding="5dp"
                android:background="@drawable/text_background"
                android:fontFamily="@font/roboto"
                android:textSize="40px"></TextView>

            <View
                android:id="@+id/div1"
                android:layout_width="250dp"
                android:layout_height="3dp"
                android:layout_below="@+id/textet5"
                android:layout_alignStart="@+id/textet5"
                android:layout_alignLeft="@+id/textet5"
                android:layout_alignEnd="@+id/textet5"
                android:layout_alignRight="@+id/textet5"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:background="@color/yellow" />

            <TextView
                android:id="@+id/textet4"
                android:layout_width="260dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textet3"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/chem"
                android:textColor="#09601E"
                android:textSize="40px"></TextView>

            <TextView
                android:id="@+id/textet5"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_below="@+id/textet4"
                android:justificationMode="inter_word"
                android:layout_marginTop="5dp"
                android:padding="5dp"
                android:background="@drawable/text_background"
                android:fontFamily="@font/roboto"
                android:textSize="40px"></TextView>

            <View
                android:id="@+id/div2"
                android:layout_width="20dp"
                android:layout_height="3dp"
                android:layout_below="@+id/textet3"
                android:layout_alignStart="@+id/textet3"
                android:layout_alignLeft="@+id/textet3"
                android:layout_alignEnd="@+id/textet3"
                android:layout_alignRight="@+id/textet3"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="30dp"
                android:background="@color/yellow"
                android:layout_marginLeft="20dp" />

            <TextView
                android:id="@+id/textet6"
                android:layout_width="260dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textet5"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/prevent"
                android:textColor="#09601E"
                android:textSize="40px"></TextView>

            <TextView
                android:id="@+id/textet7"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_below="@+id/textet6"
                android:layout_marginTop="5dp"
                android:justificationMode="inter_word"
                android:layout_marginBottom="10dp"
                android:padding="5dp"
                android:background="@drawable/text_background"
                android:fontFamily="@font/roboto"
                android:textSize="40px"></TextView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"></LinearLayout>

<!--            <TextView-->
<!--                android:id="@+id/tttt"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_below="@id/textet7"-->
<!--                android:layout_marginLeft="30dp"-->
<!--                android:layout_marginTop="3dp"-->
<!--                android:fontFamily="sans-serif-black"-->
<!--                android:text="@string/click"-->
<!--                android:textColor="#09601E"-->
<!--                android:textSize="50px"></TextView>-->

            <ImageButton
                android:id="@+id/btnbtn"
                android:layout_width="24dp"
                android:layout_height="26dp"
                android:layout_above="@+id/textet3"
                android:layout_alignTop="@+id/textet2"
                android:layout_marginStart="-15dp"
                android:layout_marginLeft="-15dp"
                android:layout_marginTop="-2dp"
                android:layout_marginBottom="1dp"
                android:layout_toEndOf="@+id/textet2"
                android:layout_toRightOf="@+id/textet2"
                android:background="#ffffff"
                android:backgroundTint="@color/colorAccent"
                android:scaleType="fitXY"
                android:src="@drawable/volume"
                android:text="click"
                tools:ignore="UnknownId"></ImageButton>

        </RelativeLayout>
    </androidx.cardview.widget.CardView>
    </ScrollView>

</RelativeLayout>